# agent-sandbox

./: .gitignore  README.md
1.llm-cli/: .gitignore  llm_cli.py  pyproject.toml
2.python/: README.md  p0001_typing.py  p0002_pydantic.py  p0003_environment.py  p0004_async.py  p0004b_async_deep.py  p0004c_generator_to_async.py  p0005_iterators_generators.py  pyproject.toml
2.python/docs/: p0001_typing.md  p0002_pydantic.md  p0003_environment.md  p0004_async.md  p0004b_async_deep.md  p0005_iterators_generators.md
3.prompt-engineering/: README.md  _llm.py  p0001_prompt.py  p0002_tokens.py  p0003_system_prompt.py  p0004_structure_examples.py  p0005_reliable_answers.py  p0006_typed_output.py  p0007_thinking.py  prompt_lab.py  pyproject.toml
3.prompt-engineering/docs/: p0001_prompt.md  p0002_tokens.md  p0003_system_prompt.md  p0004_structure_examples.md  p0005_reliable_answers.md  p0006_typed_output.md
4.tool-calling/: .gitignore  README.md  _llm.py  p0001_tools_by_hand.py  p0002_tools_api.py  p0003_agent_loop.py  pyproject.toml
4.tool-calling/docs/: p0001_tools_by_hand.md  p0002_tools_api.md  p0003_agent_loop.md
5.lca-lc-foundations/: pyproject.toml  requirements.txt
5.lca-lc-foundations/notebooks/module-1/: 1.1_foundational_models.ipynb  1.1_prompting.ipynb  1.2_tools.ipynb  1.2_web_search.ipynb  1.3_memory.ipynb  1.4_multimodal_messages.ipynb  1.5_personal_chef.ipynb  1.5_personal_chef.py
5.lca-lc-foundations/notebooks/module-2/: 2.4_wedding_planners.ipynb
5.lca-lc-foundations/notebooks/module-3/: 3.4_dynamic_prompts.ipynb
6.langchain-second/: pyproject.toml
